# CPython-AST-Fuzzer

./: .gitignore  LICENSE  aflpp.nix  atheris-nix-bash.patch  build-python.sh  build.sh  check.sh  cpython.nix  gen_hints.sh  get-allow-list.sh  hints.nix  import_test.sh  main.sh  pipeline.md  pipline.md  plain_python.nix  python_pkgs.nix  readme.md  replay.sh  run.sh
scripts/: cpython.nix  gen_hints.py  get_asan.py  hints.nix  llvm_pkgs.nix  patch_python.py  patched_all_elf.sh  plain_python.nix  python_pkgs.nix
scripts/codgen/: deepcopy_ast.py  override_func.py
src/: CMakeLists.txt  dumpAST.c  entry.c  main.py  module.c
src/common/: common.h  hash.c  log.h
src/deepcopy_ast/: deepcopy.c
src/doc/: pyFuzzerHelper.pyi  pyFuzzerTarget.pyi
src/fuzzerHelper/: ast_dump.c  dummy_ast.c  helper.c  helper.h
src/fuzzerHelper/mutators/: add_claz.c  add_override_func.c  mutate_bytearray.c  mutate_dict.c  mutate_list.c  mutate_locals.c  mutate_type.h  mutators.c  mutators.h  mutetate_dict.c
src/fuzzerHelper/mutatos/: add_claz.c  mutators.c  mutators.h
src/fuzzerHelper/python/: pycore_asdl.c  python-ast.c  readme.md
src/fuzzerHelper/utils/: arena.c  arena.h  ast.c  ast.h  clz.c  constant.c  deepcopy.c  deepcopy.h  defs.h  dict.c  func.c  gen_clz.c  gen_func.c  iterable.c  locals.c  log.c  log.h  name_gen.c  override_func.h
src/fuzzerTarget/: ast_dump.c  target.c  target.h
src/mutators/: ast.c  fuzzer.c  fuzzer.h  utils.c
src/utils/: ast.c  ast.h  mem.c
